[project]
name = "camera-manual-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.1",
    "uvicorn>=0.34.2",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.2.2",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "numpy>=1.24.0",
    "langchain-community>=0.3.24",
    "pypdf>=5.5.0",
    "langchain-ollama>=0.3.3",
]
